# VAXPUF

./: README.md  fix_opengl.py  meson.build  meson_options.txt  patch_opengl.py
apps/: meson.build
apps/vaxp_term/: meson.build
apps/vaxp_term/src/: config_parser.c  config_parser.h  main.c  pty_handler.c  pty_handler.h  vaxp_terminal.c  vaxp_terminal.h
docs/: CHEAT_SHEET.md  FRAMEWORK_CAPABILITIES.md  QUICK_START.md  README.md  WIDGET_REFERENCE.md  api-reference.md  events.md  getting-started.md  i18n.md  state-management.md  theming.md  widgets.md
examples/: animation_demo.c  calculator_demo.c  const_demo.c  control_center_demo.c  counter_app.c  decoration_demo.c  desktop_panel_demo.c  hello_world.c  meson.build  multi_window.c  new_widgets_demo.c  opengl_demo.c  panel_demo.c  simple_app.c  text_input_demo.c  widget_panel_demo.c  widget_test.c
include/vaxp/: vaxp_app.h  vaxpui.h
include/vaxp/backend/: vaxp_clipboard.h  vaxp_cursor.h  vaxp_display.h  vaxp_dnd.h  vaxp_event.h  vaxp_event_queue.h  vaxp_surface.h  vaxp_window.h
include/vaxp/core/: vaxp_animation.h  vaxp_animation_group.h  vaxp_focus.h  vaxp_memory.h  vaxp_ref.h  vaxp_result.h  vaxp_spring_animation.h  vaxp_theme.h  vaxp_types.h
include/vaxp/graphics/: vaxp_canvas.h  vaxp_canvas_opengl.h
include/vaxp/state/: vaxp_bloc_builder.h  vaxp_cubit.h
include/vaxp/widgets/: vaxp_accordion.h  vaxp_appbar.h  vaxp_avatar.h  vaxp_badge.h  vaxp_bottom_nav.h  vaxp_breadcrumb.h  vaxp_button.h  vaxp_calendar.h  vaxp_card.h  vaxp_carousel.h  vaxp_chart.h  vaxp_checkbox.h  vaxp_chip.h  vaxp_color_picker.h  vaxp_color_swatch.h  vaxp_container.h  vaxp_context_menu.h  vaxp_date_picker.h  vaxp_dialog.h  vaxp_divider.h  vaxp_drawer.h  vaxp_dropdown.h  vaxp_file_chooser.h  vaxp_grid_view.h  vaxp_icon.h  vaxp_image.h  vaxp_label.h  vaxp_link.h  vaxp_list_view.h  vaxp_menubar.h  vaxp_notification.h  vaxp_number_input.h  vaxp_padding.h  vaxp_popover.h  vaxp_progress.h  vaxp_radio.h  vaxp_rating.h  vaxp_scrollable.h  vaxp_search_bar.h  vaxp_separator.h  (+21 more)
include/venom/: venom_app.h  venomui.h
include/venom/backend/: venom_clipboard.h  venom_cursor.h  venom_display.h  venom_dnd.h  venom_event.h  venom_event_queue.h  venom_surface.h  venom_window.h
include/venom/core/: venom_animation.h  venom_animation_group.h  venom_focus.h  venom_memory.h  venom_ref.h  venom_result.h  venom_spring_animation.h  venom_theme.h  venom_types.h
include/venom/graphics/: venom_canvas.h  venom_canvas_opengl.h
include/venom/state/: venom_bloc_builder.h  venom_cubit.h
include/venom/widgets/: venom_accordion.h  venom_appbar.h  venom_avatar.h  venom_badge.h  venom_bottom_nav.h  venom_breadcrumb.h  venom_button.h  venom_calendar.h  venom_card.h  venom_carousel.h  venom_chart.h  venom_checkbox.h  venom_chip.h  venom_color_picker.h  venom_color_swatch.h  venom_container.h  venom_context_menu.h  venom_date_picker.h  venom_dialog.h  venom_divider.h  venom_drawer.h  venom_dropdown.h  venom_file_chooser.h  venom_grid_view.h  venom_icon.h  venom_image.h  venom_label.h  venom_link.h  venom_list_view.h  venom_menubar.h  venom_notification.h  venom_number_input.h  venom_padding.h  venom_popover.h  venom_progress.h  venom_radio.h  venom_rating.h  venom_scrollable.h  venom_search_bar.h  venom_separator.h  (+21 more)
src/backend/: vaxp_event_queue.c  vaxp_window.c  venom_event_queue.c  venom_window.c
src/backend/x11/: vaxp_event.c  vaxp_x11_clipboard.c  vaxp_x11_cursor.c  vaxp_x11_display.c  vaxp_x11_dnd.c  venom_event.c  venom_x11_clipboard.c  venom_x11_cursor.c  venom_x11_display.c  venom_x11_dnd.c
src/core/: vaxp_animation.c  vaxp_animation_group.c  vaxp_app.c  vaxp_focus.c  vaxp_init.c  vaxp_memory.c  vaxp_ref.c  vaxp_result.c  vaxp_spring_animation.c  vaxp_theme.c  venom_animation.c  venom_animation_group.c  venom_app.c  venom_focus.c  venom_init.c  venom_memory.c  venom_ref.c  venom_result.c  venom_spring_animation.c  venom_theme.c
src/graphics/: vaxp_canvas_cairo.c  vaxp_canvas_opengl.c  vaxp_canvas_skia.cpp  vaxp_text_engine.c  vaxp_text_engine.h  venom_canvas_cairo.c  venom_canvas_opengl.c  venom_canvas_skia.cpp
src/state/: vaxp_bloc_builder.c  vaxp_cubit.c  venom_bloc_builder.c  venom_cubit.c
src/widgets/: vaxp_accordion.c  vaxp_appbar.c  vaxp_avatar.c  vaxp_badge.c  vaxp_bottom_nav.c  vaxp_breadcrumb.c  vaxp_button.c  vaxp_calendar.c  vaxp_card.c  vaxp_carousel.c  vaxp_chart.c  vaxp_checkbox.c  vaxp_chip.c  vaxp_color_picker.c  vaxp_color_swatch.c  vaxp_container.c  vaxp_context_menu.c  vaxp_date_picker.c  vaxp_dialog.c  vaxp_divider.c  vaxp_drawer.c  vaxp_dropdown.c  vaxp_file_chooser.c  vaxp_grid_view.c  vaxp_icon.c  vaxp_image.c  vaxp_label.c  vaxp_link.c  vaxp_list_view.c  vaxp_menubar.c  vaxp_notification.c  vaxp_number_input.c  vaxp_padding.c  vaxp_popover.c  vaxp_progress.c  vaxp_radio.c  vaxp_rating.c  vaxp_scrollable.c  vaxp_search_bar.c  vaxp_sized_box.c  (+80 more)
tests/: meson.build
vaxp-de/: audio_dbus_service.c  meson.build
vaxp-de/panel/: audio_client.c  audio_client.h  meson.build  vaxp-panel.c
venom-de/: meson.build
venom-de/panel/: audio_client.c  audio_client.h  meson.build  venom-panel.c
