# Examples

hello_world_exe = executable('hello_world',
    'hello_world.c',
    dependencies: venomui_dep,
)

simple_app_exe = executable('simple_app',
    'simple_app.c',
    dependencies: venomui_dep,
)

counter_app_exe = executable('counter_app',
    'counter_app.c',
    dependencies: venomui_dep,
)

multi_window_exe = executable('multi_window',
    'multi_window.c',
    dependencies: venomui_dep,
)

text_input_demo_exe = executable('text_input_demo',
    'text_input_demo.c',
    dependencies: venomui_dep,
)

widget_test_exe = executable('widget_test',
    'widget_test.c',
    dependencies: venomui_dep,
)

animation_demo_exe = executable('animation_demo',
    'animation_demo.c',
    dependencies: venomui_dep,
)

const_demo_exe = executable('const_demo',
    'const_demo.c',
    dependencies: venomui_dep,
)
